name:                yige-pass
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/oahziur/yige-pass#readme
license:             BSD3
license-file:        LICENSE
author:              Rui Zhao
maintainer:          oahziur@gmail.com
category:            Tool
build-type:          Simple
cabal-version:       >=1.10

executable yige-pass
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Add,
                       Delete,
                       Init,
                       NewPass,
                       Util,
                       VaultData,
                       View
  build-depends:       base >= 4.7 && < 5,
                       random == 1.1,
                       json == 0.9.1,
                       directory == 1.2.2.0,
                       bytestring == 0.10.6.0,
                       pbkdf == 1.1.1.1,
                       base16-bytestring == 0.1.1.6,
                       cipher-aes == 0.2.11,
                       Hclip == 3.0.0.3
